# cloakpipe

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cloakpipe.docker.toml  docker-compose.yml
benchmarks/: e2e_quality_test.py  nvidia_gliner_pii_eval.py  realworld_eval.py  test-config.toml
crates/cloakpipe-audit/: Cargo.toml
crates/cloakpipe-cli/: Cargo.toml
crates/cloakpipe-cli/src/: commands.rs  main.rs
crates/cloakpipe-cli/tests/: test_scan.rs
crates/cloakpipe-core/: Cargo.toml
crates/cloakpipe-core/src/: config.rs  format_preserving.rs  lib.rs  profiles.rs  replacer.rs  session.rs  vault.rs  vault_sqlite.rs
crates/cloakpipe-mcp/: Cargo.toml
crates/cloakpipe-proxy/: Cargo.toml
crates/cloakpipe-proxy/src/: handlers.rs  streaming.rs
crates/cloakpipe-tree/: Cargo.toml
crates/cloakpipe-tree/src/: indexer.rs  parser.rs  search.rs  storage.rs
crates/cloakpipe-vector/: Cargo.toml
crates/cloakpipe-vector/src/: adcpe.rs  lib.rs
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard-dist/: index.html
dashboard-dist/assets/: AccessHandlePoolVFS-BTzTIh5r.js  AccessHandlePoolVFS-C1uY2P-2.js  AccessHandlePoolVFS-CUsnMUHE.js  FacadeVFS-B_tdUAGv.js  FacadeVFS-BbtO3fiB.js  FacadeVFS-C8Fx-59N.js  IDBBatchAtomicVFS-CIXT2laf.js  IDBBatchAtomicVFS-CclnMR7p.js  IDBBatchAtomicVFS-UsIvoh7E.js  OPFSCoopSyncVFS-BsnHqMhL.js  OPFSCoopSyncVFS-CWga3i0r.js  OPFSCoopSyncVFS-DvjG6HuH.js  SharedSyncImplementation.worker-D3cBvxuX.js  WASQLiteDB.worker-DNX3eCs2.js  bson-CuyQlZSR.js  index-C5axFrs3.css  index-RW4ZYeia.js  mc-wa-sqlite-BqYDUwbr.js  mc-wa-sqlite-async-iCC3YOzd.js  wa-sqlite-CimC5ZC_.js  wa-sqlite-async-BKEp90aZ.js
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: Layout.tsx  StatCard.tsx
dashboard/src/lib/: cloakpipe.ts  retrieval.ts  supabase.ts
dashboard/src/pages/: Chat.tsx  Compliance.tsx  (+6 more)
integrations/langchain-cloakpipe/: README.md  pyproject.toml
integrations/langchain-cloakpipe/langchain_cloakpipe/: __init__.py  chat.py  embeddings.py
integrations/langchain-cloakpipe/tests/: test_chat.py  test_embeddings.py
integrations/llamaindex-cloakpipe/: README.md  pyproject.toml
integrations/llamaindex-cloakpipe/llamaindex_cloakpipe/: __init__.py  embeddings.py  llm.py
integrations/llamaindex-cloakpipe/tests/: test_embeddings.py  test_llm.py
integrations/python/: pyproject.toml
integrations/python/cloakpipe/: __init__.py  client.py  langchain.py  llamaindex.py
integrations/python/tests/: test_integrations.py
tools/: gliner-pii-server.py
(+9 files in other folders)
