[package]
name = "cloakpipe-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Structured audit logging for CloakPipe"

[dependencies]
cloakpipe-core = { path = "../cloakpipe-core", version = "0.2.0" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true
