[package]
name = "cloakpipe-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Vector encryption (ADCPE) for CloakPipe — future scope"

[dependencies]
anyhow.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3"
