[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloakpipe"
version = "0.8.0"
description = "Privacy proxy for LLM pipelines — LangChain and LlamaIndex integrations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
llamaindex = ["llama-index-core>=0.10.0"]
all = ["langchain-core>=0.2.0", "llama-index-core>=0.10.0"]

[tool.hatch.build.targets.wheel]
packages = ["cloakpipe"]
